force-app/main/default/objects/NMO_Process__c/NMO_Process__c.object-meta.xml
<CustomObject>
    <description>This Object is meant to manage the N.M.O. dedicated process.</description>
    <label>Launching Phase</label>
    <nameField>
        <displayFormat>NP-{0000000000}</displayFormat>
        <label>N.M.O. Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Launching Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>