force-app/main/default/objects/NMO_Process__c/fields/Action_plan__c.field-meta.xml
<CustomField>
    <fullName>Action_plan__c</fullName>
    <label>Action plan</label>
    <type>TextArea</type>
</CustomField>