force-app/main/default/objects/NMO_Process__c/fields/Back_Watch_Granted__c.field-meta.xml
<CustomField>
    <fullName>Back_Watch_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Watch Granted</label>
    <type>Checkbox</type>
</CustomField>