force-app/main/default/objects/NMO_Process__c/fields/BackCare_Stage__c.field-meta.xml
<CustomField>
    <fullName>BackCare_Stage__c</fullName>
    <label>BackCare Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Back_Market_Services_Stages</valueSetName>
    </valueSet>
</CustomField>