force-app/main/default/objects/NMO_Process__c/fields/BizDevApproval__c.field-meta.xml
<CustomField>
    <fullName>BizDevApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BizDev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>N_M_O_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>