force-app/main/default/objects/NMO_Process__c/fields/BizDevBuybackApproval__c.field-meta.xml
<CustomField>
    <fullName>BizDevBuybackApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BizDev Buyback</label>
    <referenceTo>User</referenceTo>
    <relationshipName>N_M_O_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>