force-app/main/default/objects/NMO_Process__c/fields/Buyback_Non_Compliance_with_Charter__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Non_Compliance_with_Charter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyback - Non Compliance with Charter</label>
    <type>Checkbox</type>
</CustomField>