force-app/main/default/objects/NMO_Process__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Values List!</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>