force-app/main/default/objects/NMO_Process__c/fields/Early_NMO_2__c.field-meta.xml
<CustomField>
    <fullName>Early_NMO_2__c</fullName>
    <label>Early Launching Phase 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Trigger</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Moved to NMO 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>