force-app/main/default/objects/NMO_Process__c/fields/Escalate_AP__c.field-meta.xml
<CustomField>
    <fullName>Escalate_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate AP</label>
    <type>Checkbox</type>
</CustomField>