force-app/main/default/objects/NMO_Process__c/fields/Explanation_7__c.field-meta.xml
<CustomField>
    <fullName>Explanation_7__c</fullName>
    <defaultValue>&apos;Early NMO 2&apos;</defaultValue>
    <label>Move to early Launching Phase 2</label>
    <type>TextArea</type>
</CustomField>