force-app/main/default/objects/NMO_Process__c/fields/Explanation_8__c.field-meta.xml
<CustomField>
    <fullName>Explanation_8__c</fullName>
    <defaultValue>&apos;Move to Run or Exit&apos;</defaultValue>
    <label>Move to Run or Exit</label>
    <type>TextArea</type>
</CustomField>