force-app/main/default/objects/NMO_Process__c/fields/False_Start__c.field-meta.xml
<CustomField>
    <fullName>False_Start__c</fullName>
    <label>False Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>