force-app/main/default/objects/NMO_Process__c/fields/FBBM_Stage__c.field-meta.xml
<CustomField>
    <fullName>FBBM_Stage__c</fullName>
    <label>F.B.B.M. Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Back_Market_Services_Stages</valueSetName>
    </valueSet>
</CustomField>