force-app/main/default/objects/NMO_Process__c/fields/For_Testing_Phase_2__c.field-meta.xml
<CustomField>
    <fullName>For_Testing_Phase_2__c</fullName>
    <defaultValue>DATETIMEVALUE( TODAY() +1)</defaultValue>
    <label>For Testing Phase 2</label>
    <type>DateTime</type>
</CustomField>