force-app/main/default/objects/NMO_Process__c/fields/From_NMO_2_to_Exit_Big__c.field-meta.xml
<CustomField>
    <fullName>From_NMO_2_to_Exit_Big__c</fullName>
    <defaultValue>(&apos;Move to Run or NMO 2&apos;)</defaultValue>
    <label>Move to Run or Launching Phase 2</label>
    <type>TextArea</type>
</CustomField>