force-app/main/default/objects/NMO_Process__c/fields/From_NMO_2_to_Run_BW__c.field-meta.xml
<CustomField>
    <fullName>From_NMO_2_to_Run_BW__c</fullName>
    <defaultValue>(&apos;Increase limitation to 15&apos;)</defaultValue>
    <label>Increase limitation to 15</label>
    <type>TextArea</type>
</CustomField>