force-app/main/default/objects/NMO_Process__c/fields/Has_been_created_since_42_days_or_more__c.field-meta.xml
<CustomField>
    <fullName>Has_been_created_since_42_days_or_more__c</fullName>
    <formula>(Has_Begun_On__c + 42) &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has been created since 42 days or more</label>
    <type>Checkbox</type>
</CustomField>