force-app/main/default/objects/NMO_Process__c/fields/has_been_created_since_60_days_or_more__c.field-meta.xml
<CustomField>
    <fullName>has_been_created_since_60_days_or_more__c</fullName>
    <formula>(Has_Begun_On__c + 60) &lt;= TODAY()</formula>
    <label>has been created since 60 days or more</label>
    <type>Checkbox</type>
</CustomField>