force-app/main/default/objects/NMO_Process__c/fields/Has_Entered_NMO_2__c.field-meta.xml
<CustomField>
    <fullName>Has_Entered_NMO_2__c</fullName>
    <formula>NOT ( ISNULL ( Has_Entered_NMO_2_On__c ) )</formula>
    <label>Has Entered N.M.O. 2</label>
    <type>Checkbox</type>
</CustomField>