force-app/main/default/objects/NMO_Process__c/fields/Has_Entered_NMO_2_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Entered_NMO_2_On__c</fullName>
    <description>This Field is used to know for how long an N.M.O. Process has entered the N.M.O. 2 Stage.</description>
    <label>Has Entered N.M.O. 2 On</label>
    <type>Date</type>
</CustomField>