force-app/main/default/objects/NMO_Process__c/fields/Has_entered_phase_1_on__c.field-meta.xml
<CustomField>
    <fullName>Has_entered_phase_1_on__c</fullName>
    <label>Has entered phase 1 on</label>
    <type>Date</type>
</CustomField>