force-app/main/default/objects/NMO_Process__c/fields/Has_Entered_Phase_2_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Entered_Phase_2_On__c</fullName>
    <label>Has Entered Phase 2 On</label>
    <type>Date</type>
</CustomField>