force-app/main/default/objects/NMO_Process__c/fields/Has_entered_Phase_3_on__c.field-meta.xml
<CustomField>
    <fullName>Has_entered_Phase_3_on__c</fullName>
    <label>Has entered Phase 3 on</label>
    <type>Date</type>
</CustomField>