force-app/main/default/objects/NMO_Process__c/fields/Has_failed_NMO_on__c.field-meta.xml
<CustomField>
    <fullName>Has_failed_NMO_on__c</fullName>
    <label>Has failed Launching Phase on</label>
    <type>Date</type>
</CustomField>