force-app/main/default/objects/NMO_Process__c/fields/Has_finished_BackWatch_NMO__c.field-meta.xml
<CustomField>
    <fullName>Has_finished_BackWatch_NMO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filled by approval process</description>
    <label>Has finished BackWatch Launching Phase</label>
    <type>Checkbox</type>
</CustomField>