force-app/main/default/objects/NMO_Process__c/fields/Has_Re_entered_NMO_2__c.field-meta.xml
<CustomField>
    <fullName>Has_Re_entered_NMO_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Re-entered N.M.O. 2</label>
    <type>Checkbox</type>
</CustomField>