force-app/main/default/objects/NMO_Process__c/fields/Has_Re_entered_NMO_2_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Re_entered_NMO_2_On__c</fullName>
    <label>Has Re-entered N.M.O. 2 On</label>
    <type>Date</type>
</CustomField>