force-app/main/default/objects/NMO_Process__c/fields/Has_Reached_100_Sales__c.field-meta.xml
<CustomField>
    <fullName>Has_Reached_100_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Reached 100 Sales</label>
    <type>Checkbox</type>
</CustomField>