force-app/main/default/objects/NMO_Process__c/fields/Has_Reached_100_Sales_on__c.field-meta.xml
<CustomField>
    <fullName>Has_Reached_100_Sales_on__c</fullName>
    <formula>Merchant__r.Reached_100_Sales_on__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Reached 100 Sales on</label>
    <type>Date</type>
</CustomField>