force-app/main/default/objects/NMO_Process__c/fields/has_reached_100_sales_since_21_days__c.field-meta.xml
<CustomField>
    <fullName>has_reached_100_sales_since_21_days__c</fullName>
    <formula>Merchant__r.Reached_100_Sales_on__c + 21 &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>has reached 100 sales since 21 days</label>
    <type>Checkbox</type>
</CustomField>