force-app/main/default/objects/NMO_Process__c/fields/Has_reached_50_sales__c.field-meta.xml
<CustomField>
    <fullName>Has_reached_50_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has reached 50 sales</label>
    <type>Checkbox</type>
</CustomField>