force-app/main/default/objects/NMO_Process__c/fields/Has_reached_50_sales_since_21_days__c.field-meta.xml
<CustomField>
    <fullName>Has_reached_50_sales_since_21_days__c</fullName>
    <formula>Merchant__r.Reached_50_sales_on__c + 21 &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has reached 50 sales since 21 days</label>
    <type>Checkbox</type>
</CustomField>