force-app/main/default/objects/NMO_Process__c/fields/Has_reached_70_sales_on__c.field-meta.xml
<CustomField>
    <fullName>Has_reached_70_sales_on__c</fullName>
    <formula>Merchant__r.Reached_70_sales_on__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has reached 70 sales on</label>
    <type>Date</type>
</CustomField>