force-app/main/default/objects/NMO_Process__c/fields/Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Submitter__c</fullName>
    <description>Approval Process Initial Submitter</description>
    <label>Initial Submitter</label>
    <type>Email</type>
</CustomField>