force-app/main/default/objects/NMO_Process__c/fields/Is_Expected_To_End_On__c.field-meta.xml
<CustomField>
    <fullName>Is_Expected_To_End_On__c</fullName>
    <defaultValue>today() + 120</defaultValue>
    <label>Is Expected To End On</label>
    <type>Date</type>
</CustomField>