force-app/main/default/objects/NMO_Process__c/fields/Is_Expected_To_End_On_OLD__c.field-meta.xml
<CustomField>
    <fullName>Is_Expected_To_End_On_OLD__c</fullName>
    <formula>DATEVALUE ( CreatedDate ) + 120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expected To End On_OLD</label>
    <type>Date</type>
</CustomField>