force-app/main/default/objects/NMO_Process__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is exclusively used by the Approval Process and the Lightning Record Layout Page.</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>