force-app/main/default/objects/NMO_Process__c/fields/Kanban_Card_Link__c.field-meta.xml
<CustomField>
    <fullName>Kanban_Card_Link__c</fullName>
    <description>This field is used on the N.M.O. Kanban to display the Merchant Name as a link to the N.M.O. Record.</description>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, Merchant__r.Name, &quot;_blank&quot;)</formula>
    <label>Seller Launching Phase</label>
    <type>Text</type>
</CustomField>