force-app/main/default/objects/NMO_Process__c/fields/Last_Buyboxes_30_of_Listing_flag__c.field-meta.xml
<CustomField>
    <fullName>Last_Buyboxes_30_of_Listing_flag__c</fullName>
    <formula>IF ( AND ( Merchant__r.Last_Daily_Biz_Perf_Date__c &lt;&gt; NULL, 
           Merchant__r.Last_Daily_Biz_Perf_Buyboxes__c &lt; ( Merchant__r.Last_Daily_Biz_Perf_Listings__c * $Setup.Sales_Settings__c.Daily_Buyboxes_Listings_Ratio_Alert_TH__c ) ) , 
     IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Warning!&quot;, 15, 15), 
     IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;All Good&quot;, 15, 15) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Buyboxes &lt; 30% of Listing flag</label>
    <type>Text</type>
</CustomField>