force-app/main/default/objects/NMO_Process__c/fields/Last_Sales_2_flag__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_2_flag__c</fullName>
    <formula>IF ( AND ( Merchant__r.Last_Daily_Biz_Perf_Date__c &lt;&gt; NULL, 
           Merchant__r.Last_Daily_Biz_Perf_Sales__c &lt;  $Setup.Sales_Settings__c.Daily_Sales_Alert_Threshold__c ) , 
     IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Warning!&quot;, 15, 15), 
     IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;All Good&quot;, 15, 15) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sales &lt; 2 flag</label>
    <type>Text</type>
</CustomField>