force-app/main/default/objects/NMO_Process__c/fields/Last_Sales_Listings_or_Buybox_0_flag__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Listings_or_Buybox_0_flag__c</fullName>
    <formula>IF ( OR ( Merchant__r.Last_Daily_Biz_Perf_Date__c &lt;&gt; NULL, 
           Merchant__r.Last_Daily_Biz_Perf_Sales__c = 0, 
           Merchant__r.Last_Daily_Biz_Perf_Listings__c = 0, 
           Merchant__r.Last_Daily_Biz_Perf_Buyboxes__c = 0 ) , 
     IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Warning!&quot;, 15, 15), 
     IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;All Good&quot;, 15, 15) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sales, Listings or Buybox = 0 flag</label>
    <type>Text</type>
</CustomField>