force-app/main/default/objects/NMO_Process__c/fields/M_Stock_Target__c.field-meta.xml
<CustomField>
    <fullName>M_Stock_Target__c</fullName>
    <label>M Stock Target</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>