force-app/main/default/objects/NMO_Process__c/fields/Mandat_SEPA_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Mandat_SEPA_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandat SEPA Uploaded</label>
    <type>Checkbox</type>
</CustomField>