force-app/main/default/objects/NMO_Process__c/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is useful for implement a one-to-one relationship with the Merchant Object. 
The value is set once on Record creation by a Process Builder job and is never modified.</description>
    <externalId>true</externalId>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>