force-app/main/default/objects/NMO_Process__c/fields/Merchant_PK__c.field-meta.xml
<CustomField>
    <fullName>Merchant_PK__c</fullName>
    <formula>Merchant__r.Back_Office_PK__c</formula>
    <label>Merchant P.K.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>