force-app/main/default/objects/NMO_Process__c/fields/Monthly_Churn__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Churn__c</fullName>
    <formula>Merchant__r.Monthly_churn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Churn</label>
    <type>Checkbox</type>
</CustomField>