force-app/main/default/objects/NMO_Process__c/fields/NextStage__c.field-meta.xml
<CustomField>
    <fullName>NextStage__c</fullName>
    <label>NextStage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NMO_Stages</valueSetName>
    </valueSet>
</CustomField>