force-app/main/default/objects/NMO_Process__c/fields/NMO_BW_Step_1_Refused__c.field-meta.xml
<CustomField>
    <fullName>NMO_BW_Step_1_Refused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launching Phase BW Step 1 Refused</label>
    <type>Checkbox</type>
</CustomField>