force-app/main/default/objects/NMO_Process__c/fields/NMO_Failed__c.field-meta.xml
<CustomField>
    <fullName>NMO_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launching Phase Failed</label>
    <type>Checkbox</type>
</CustomField>