force-app/main/default/objects/NMO_Process__c/fields/NMO_Success__c.field-meta.xml
<CustomField>
    <fullName>NMO_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launching Phase Success</label>
    <type>Checkbox</type>
</CustomField>