force-app/main/default/objects/NMO_Process__c/fields/NMOLanguageMailTemplate__c.field-meta.xml
<CustomField>
    <fullName>NMOLanguageMailTemplate__c</fullName>
    <formula>CASE(TEXT(Merchant__r.Zone__c), &apos;fr-fr&apos;, &apos;fr&apos;,
&apos;es-es&apos;, &apos;es&apos;,
&apos;it-it&apos;,&apos;it&apos;,
&apos;de-de&apos;,&apos;de&apos;,
&apos;en_US&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LaunchingPhaseLanguageMailTemplate</label>
    <type>Text</type>
</CustomField>