force-app/main/default/objects/NMO_Process__c/fields/Number_of_AP_in_NMO2__c.field-meta.xml
<CustomField>
    <fullName>Number_of_AP_in_NMO2__c</fullName>
    <label>Number of AP in Launching Phase 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>