force-app/main/default/objects/NMO_Process__c/fields/Phase_3_Limitation_update__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Limitation_update__c</fullName>
    <label>Phase 3 - Limitation update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>