force-app/main/default/objects/NMO_Process__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <formula>CASE(TEXT( Merchant__r.Profile__c ), 
&quot;Classic&quot; , &quot;Classic&quot;, 
&quot;Retailer&quot; , &quot;Retailer&quot;, 
&quot;Brand&quot; , &quot;Brand&quot;,
&quot;Buyback&quot; 
)</formula>
    <label>Profile</label>
    <type>Text</type>
</CustomField>