force-app/main/default/objects/NMO_Process__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>CASE(TEXT(Merchant__r.Rating),
&quot;Riskless&quot; , &quot;Riskless&quot;,
&quot;Risky&quot; , &quot;Risky&quot;,
 &quot;Neutral&quot;
)</formula>
    <label>Risk</label>
    <type>Text</type>
</CustomField>