force-app/main/default/objects/NMO_Process__c/fields/Ready_for_AP__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for AP</label>
    <type>Checkbox</type>
</CustomField>