force-app/main/default/objects/NMO_Process__c/fields/ReferentChampionApproval__c.field-meta.xml
<CustomField>
    <fullName>ReferentChampionApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referent champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>N_M_O_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>