force-app/main/default/objects/NMO_Process__c/fields/Sales_objective_reached_in_Phase_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_objective_reached_in_Phase_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field populated automatically when process stage is moving to &quot;Phase 3&quot;.
This field will be used to assess if the merchant moves to. SSM or BW at the end of the NMO.</inlineHelpText>
    <label>Sales objective reached in Phase 3</label>
    <type>Checkbox</type>
</CustomField>