force-app/main/default/objects/NMO_Process__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linnworks</fullName>
            </value>
            <value>
                <fullName>Shopping Flux</fullName>
            </value>
            <value>
                <fullName>Cubyn</fullName>
            </value>
            <value>
                <fullName>Neteven</fullName>
            </value>
            <value>
                <fullName>Sellermania</fullName>
            </value>
            <value>
                <fullName>Market Invaders</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Missing Values list!</fullName>
                <isActive>false</isActive>
                <label>Missing Values list!</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>