force-app/main/default/objects/NMO_Process__c/fields/Tech_Task_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Task_Limitation__c</fullName>
    <formula>if( 
((( Merchant__r.Cumulated_sales_last_30_days__c /2)/30)&lt; 3), 3, (( Merchant__r.Cumulated_sales_last_30_days__c /2)/30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Task_Limitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>