force-app/main/default/objects/NMO_Process__c/fields/TECH_test__c.field-meta.xml
<CustomField>
    <fullName>TECH_test__c</fullName>
    <label>TECH_test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>