force-app/main/default/objects/NMO_Process__c/fields/Trigger_False_Start__c.field-meta.xml
<CustomField>
    <fullName>Trigger_False_Start__c</fullName>
    <defaultValue>(&apos;Trigger False Start&apos;)</defaultValue>
    <label>Trigger False Start</label>
    <type>TextArea</type>
</CustomField>