force-app/main/default/objects/NMO_Process__c/fields/Unlimited_granted__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Useful for the Merchant Stage Process to allow its Stage to be updated from N.M.O. to Unlimited</description>
    <label>Unlimited granted</label>
    <type>Checkbox</type>
</CustomField>