force-app/main/default/objects/NMO_Process__c/fields/Weekly_Churn__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Churn__c</fullName>
    <formula>Merchant__r.Weekly_Churn__c</formula>
    <label>Weekly Churn</label>
    <type>Checkbox</type>
</CustomField>