force-app/main/default/objects/NMO_Process__c/recordTypes/NMO_E_U.recordType-meta.xml
<RecordType>
    <fullName>NMO_E_U</fullName>
    <active>true</active>
    <label>NMO EU</label>
</RecordType>