force-app/main/default/objects/NMO_Process__c/recordTypes/NMO_E_U_buyback.recordType-meta.xml
<RecordType>
    <fullName>NMO_E_U_buyback</fullName>
    <active>true</active>
    <label>NMO EU buyback</label>
</RecordType>