force-app/main/default/objects/NMO_Process__c/recordTypes/NMO_U_S.recordType-meta.xml
<RecordType>
    <fullName>NMO_U_S</fullName>
    <active>true</active>
    <label>NMO US</label>
</RecordType>